Fix: layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body {
   font-size: 14px;
   font-weight: 500;
   text-align: center;
-  padding: 2rem;
+  padding: 2rem 2rem 0 2rem;
 }
 
 body h1,
@@ -39,7 +39,7 @@ h2 {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  margin: 0 auto;
+  margin: 0 auto 4rem;
   max-width: 510px;
   padding: 0 1rem;
 }
@@ -74,7 +74,6 @@ header p {
 .message-container.langLost {
   background-color: var(--message-color);
   border: 1px dashed var(--primary-color);
-  border-radius: 0;
   visibility: visible;
 }
 
@@ -183,6 +182,16 @@ header p {
 
 .new-game-btn:hover {
   background: #0c9be9;
+}
+
+.footer {
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1),
+    0px 1px 2px 0px rgba(0, 0, 0, 0.06);
+  font-size: 14px;
+  letter-spacing: -0.5px;
+  padding: 16px;
+  text-align: center;
+  /* margin-top: 4.2rem; */
 }
 
 @media screen and (max-width: 768px) {
